--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -32,9 +32,9 @@
       <div id="table_contents">
         <table>
           <tr>
-            <th>TITLE</th>
-            <th>CONTENT</th>
-            <th>WRITER</th>
+            <th>제 목</th>
+            <th>내 용</th>
+            <th>작 성 자</th>
           </tr>
           <%for(var i = 0; i<post.length; i++){%>
           <%var data = post[i];%>
@@ -46,7 +46,7 @@
           <%}%>
         </table>
       </div>
-      <form action="search" method="GET">
+      <form action="search" method="get">
       <div id="search">
         <input id="search_bar" name="search_bar" type="text" placeholder="검색 내용">
         <br>
@@ -103,9 +103,9 @@
                 <div id="table_contents">
                   <table>
                     <tr>
-                      <th>TITLE</th>
-                      <th>CONTENT</th>
-                      <th>WRITER</th>
+                      <th>제 목</th>
+                      <th>내 용</th>
+                      <th>작 성 자</th>
                     </tr>
                     <%for(var i = 0; i<post.length; i++){%>
                     <%var data = post[i];%>
