--- a/client/views/index_signout.ejs
+++ b/client/views/index_signout.ejs
@@ -16,12 +16,12 @@
       <div id="top_header">
         <div><img src="./img/logo_transparent.png" alt="이미지가 없습니다." id="logo"></div>
         <div id="navigator">
-          <button class="menu" id="upload" onclick="upload_onclick()">커뮤니티</button>
+          <button class="menu" id="community" onclick="getCommunity()">커뮤니티</button>
           <button class="menu">기능구현</button>
         </div>
         <div id="account">
-          <button onclick="login_btn_click()" class="account" id="sign_in">SIGN IN</button>
-          <button onclick="register_btn_click()" class="account" id="sign_up">SIGN UP</button>
+          <button onclick="getSignIn()" class="account" id="sign_in">SIGN IN</button>
+          <button onclick="getSignUp()" class="account" id="sign_up">SIGN UP</button>
         </div>
       </div>
     </header>
