--- a/client/views/signup.ejs
+++ b/client/views/signup.ejs
@@ -4,8 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Welcome to Register</title>
-    <link rel="stylesheet" href="./css/register.css" />
-    <script src="./js/register.js"></script>
+    <link rel="stylesheet" href="./css/signup.css" />
     <!-- <script src="/server.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <!-- 합쳐지고 최소화된 최신 CSS -->
