--- a/client/views/index_signin.ejs
+++ b/client/views/index_signin.ejs
@@ -17,7 +17,7 @@
       <div id="top_header">
         <div><img src="./img/logo_transparent.png" alt="이미지가 없습니다." id="logo"></div>
         <div id="navigator">
-          <button class="menu" id="upload" onclick="upload_onclick()">커뮤니티</button>
+          <button class="menu" id="community" onclick="getCommunity()">커뮤니티</button>
           <button class="menu">기능구현</button>
         </div>
         <div id="account">
@@ -28,43 +28,13 @@
       </div>
     </header>
     <main>
-      <div id="table_contents">
-        <table>
-          <tr>
-            <th>제 목</th>
-            <th>내 용</th>
-            <th>작 성 자</th>
-          </tr>
-          <%for(var i = 0; i<post.length; i++){%>
-          <%var data = post[i];%>
-          <tr>
-            <td class="content"><%=data.title%></td>
-            <td class="content"><%=data.content%></td>
-            <td class="content"><%=data.writer%></td>
-          </tr>
-          <%}%>
-</table>
-</div>
-<form action="search" method="GET">
-  <div id="search">
-    <input id="search_bar" name="search_bar" type="text" placeholder="검색 내용">
-    <br>
-    <button id="search_bar_btn">검색</button>
-  </div>
-</form>
-<!-- <div id="TODO">
-  <textarea>
-                    # 에러 상태 : 에러 수정 필요 없음
-                    # 작업 상태
-                    &nbsp;&nbsp;- 커뮤니티 페이지 렌더링 작업 필요
-                    &nbsp;&nbsp;&nbsp;&nbsp;* 검색 기능 및 조회 시 작성 날짜, 작성자 렌더링
-                    &nbsp;&nbsp;&nbsp;&nbsp;* 비회원 조회 시 불가능
-                    &nbsp;&nbsp;- 계정 부분 작업 필요
-                    &nbsp;&nbsp;&nbsp;&nbsp;* 세션을 이용하여 유효 시간동안 로그인
-                    &nbsp;&nbsp;&nbsp;&nbsp;* 회원과 비회원 차별성
-                </textarea>
-</div> -->
-</main>
-</body>
+      <!--       <textarea id="chatLog" class="chat_log" readonly></textarea>
+      <form id="chat">
+        <input type="text" id="name" class="name" readonly>
+        <input type="text" id="message" class="message">
+        <input type="submit" class="chat" value="전송">
+      </form> -->
+    </main>
+  </body>
 
 </html>
