--- a/client/views/signin.ejs
+++ b/client/views/signin.ejs
@@ -3,8 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./css/login.css">
-    <script src="./js/login.js"></script>
+    <link rel="stylesheet" href="./css/signin.css">
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <!-- 합쳐지고 최소화된 최신 CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
