--- a/client/views/community.ejs
+++ b/client/views/community.ejs
@@ -11,7 +11,8 @@
     <header>
       <div id="top_header">
         <div id="navigator">
-          <button class="menu" id="community" onclick="getCommunity()">커뮤니티</button>
+          <button id="#" class="menu">기능구현</button>
+          <button class="menu" id="community" onclick="getCommunity()">게 시 판</button>
           <button id="chat" class="menu" onclick="getChatApp()">랜덤채팅</button>
         </div>
       </div>
