--- a/client/views/community.ejs
+++ b/client/views/community.ejs
@@ -12,7 +12,7 @@
       <div id="top_header">
         <div id="navigator">
           <button id="#" class="menu">기능구현</button>
-          <button class="menu" id="community" onclick="getCommunity()">게 시 판</button>
+          <button class="menu" id="community" onclick="getBoard()">게 시 판</button>
           <button id="chat" class="menu" onclick="getChatApp()">랜덤채팅</button>
         </div>
       </div>
