--- a/client/views/html/board.ejs
+++ b/client/views/html/board.ejs
@@ -3,7 +3,7 @@
 
   <head>
     <title>게시판</title>
-    <link rel="stylesheet" href="./css/board.css">
+    <link rel="stylesheet" href="/client/views/css/board.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </head>
@@ -95,7 +95,9 @@
             <input class="form-control" id="search-words" name="searchWords" type="text" placeholder="제목 혹은 내용">
             <button class="btn btn-primary" id="btnSearch" type="submit">검색</button>
           </form>
-          <div id="getPostUpload" class="btn btn-dark">글 작성</div>
+          <a href="/board/boardUpload">
+            <div id="getPostUpload" class="btn btn-dark">글 작성</div>
+          </a>
         </div>
         <div id="sidebar">
           <div id="realtimeContents">실시간 인기 게시물</div>
