--- a/client/views/html/boardUpload.ejs
+++ b/client/views/html/boardUpload.ejs
@@ -3,7 +3,10 @@
 
   <head>
     <title>게시물 등록</title>
-    <link rel="stylesheet" href="./css/boardUpload.css">
+    <link href="/client/views/css/boardUpload.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="/client/views/js/boardUpload.js"></script>
   </head>
 
   <body>
@@ -11,13 +14,20 @@
 
     </header>
     <main>
-      <div>
+      <div id="inputForm" class="border border-2 border-info border-start-0 border-bottom-0 border-end-0">
         <form id="postForm" method="post">
-          <input id="postTitle" name="postTitle" placeholder="제목">
+          <button id="selectBoard" class="btn btn-secondary dropdown-toggle active" type="button" data-bs-toggle="dropdown" aria-expanded="false">게시판 선택</button>
+          <ul class="dropdown-menu">
+            <li class="dropdown-item">자유게시판</li>
+            <li class="dropdown-item">일상이야기</li>
+          </ul>
+          <div id="writer" class="border border-dark"><%=name%></div>
           <br>
-          <textarea id="postContent" name="postContent" placeholder="내용"></textarea>
+          <input id="postTitle" class="form-control" name="postTitle" placeholder="제목을 입력하세요.">
           <br>
-          <button id="postUpload" type="submit">등록</button>
+          <input id="postContent" class="form-control text-start" name="postContent" onkeydown="onEnterKeyDown()" placeholder="내용을 입력하세요.">
+          <br>
+          <button id="postUpload" type="submit" onkeydown="onEnterKeyDown()">등록</button>
         </form>
       </div>
     </main>
