--- a/client/views/html/signup.ejs
+++ b/client/views/html/signup.ejs
@@ -20,8 +20,9 @@
         <input id="id" type="text" class="form-control" name="signupID" placeholder="I  D" required>
       </div>
       <div class="input-group mt-2 mb-2">
-        <span class="form-text">특수문자 + 영문 + 숫자의 조합으로 12자 이상으로 구성</span>
+        <label for="pw">PW</label>
         <input id="pw" class="form-control" type="password" name="signupPW" placeholder="P  W" required>
+        <span class="form-text">특수문자 + 영문 + 숫자의 조합으로 12자 이상으로 구성</span>
         <input id="confirm_pw" class="form-control" type="password" name="signupPW_confirm" placeholder="CONFIRM" required>
       </div>
       <div class="input-group mb-2">
