--- a/client/views/css/signin.css
+++ b/client/views/css/signin.css
@@ -2,27 +2,14 @@
 	text-align: center;
 }
 
-#header_notice {
-	color: greenyellow;
-	position: relative;
-	top: 340px;
+#headerNotice {
+	margin-top: 85px;
 }
-
-body{
-	min-height: 100vh;
-	background: -webkit-gradient(linear, left bottom, right top, from(#92b5db), to(#1d466c));
-  background: -webkit-linear-gradient(bottom left, #92b5db 0%, #1d466c 100%);
-  background: -moz-linear-gradient(bottom left, #92b5db 0%, #1d466c 100%);
-  background: -o-linear-gradient(bottom left, #92b5db 0%, #1d466c 100%);
-  background: linear-gradient(to top right, #92b5db 0%, #1d466c 100%);
-}
-
 
 #input_accounts {
 	text-align: center;
 	position: relative;
 	top: 385px;
-	/*height:15px;*/
 }
 
 footer {
@@ -32,25 +19,23 @@ footer {
 	color: greenyellow;
 }
 
-#login{
+button#btnLogin{
 	font-size:large;
-	font-family:Bahnschrift;
 	font-weight:bold;
 	width:150px;
-	position:relative;
-	top:15px;
+	/* top:10px; */
 }
 
 form#formAccounts{
+	background-color: transparent;
 	margin: auto;
-	border-width: 2px;
+	margin-top: 24px;
+	border-width: 1px;
 	border-radius: 10px;
 	border-style: groove;
 	border-color: blueviolet;
 	padding: 15px;
 	width: fit-content;
-	background-color: #dcdcdc;
-
 }
 
 div.input-group{
@@ -64,9 +49,12 @@ div.input-group{
 	width: 240px;
 }
 
-#remember_account{
-	position: relative;
-	top: 15px;
-	font-weight: 900;
-	color: greenyellow;
+#lbSaveAccount{
+	margin-top: 10px;
+}
+
+label#lbID, label#lbPW{
+	font-size: 12px;
+	font-weight: bold;
+	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
