--- a/client/views/css/signup.css
+++ b/client/views/css/signup.css
@@ -1,13 +1,4 @@
-﻿body{
-	min-height: 100vh;
-	background: -webkit-gradient(linear, left bottom, right top, from(#92b5db), to(#1d466c));
-  background: -webkit-linear-gradient(bottom left, #92b5db 0%, #1d466c 100%);
-  background: -moz-linear-gradient(bottom left, #92b5db 0%, #1d466c 100%);
-  background: -o-linear-gradient(bottom left, #92b5db 0%, #1d466c 100%);
-  background: linear-gradient(to top right, #92b5db 0%, #1d466c 100%);
-}
-
-div#signupText{
+﻿div#signupText{
 	font-weight: 850px;
 	font-size: x-large;
 }
@@ -31,12 +22,12 @@ div.input-group{
 form#formSignUp{
 	width: fit-content;
 	margin: 50px auto;
-	border-width: 2px;
+	border-width: 1px;
 	border-style: groove;
 	border-color: darkviolet;
 	border-radius: 10px;
 	padding: 15px;
-	background-color: azure;
+	background-color: transparent;
 	flex-direction: row;
 	flex-wrap: wrap;
 }
