--- a/client/views/html/auth/signin.ejs
+++ b/client/views/html/auth/signin.ejs
@@ -11,15 +11,9 @@
 
   <body class="bg-light">
     <header>
-      <div id="headerNotice">
-        <div style="font-weight: bolder">개발, 테스트 전용 웹 사이트</div>
-        <div style="font-weight: 200;">
-          <br>현재 웹 사이트는 개발 및 테스트 용도로 사용되며, <br>회원가입 및 제공해주신 정보는 15일 후 자동 파기됩니다.
-        </div>
-      </div>
     </header>
 
-    <form method="POST" id="formAccounts">
+    <form id="formAccounts" class="border border-1 border-success" method="POST">
       <div style="font-weight: bolder; font-size: 24px;">로그인</div>
       <div class="input-group">
         <input id="id" class="form-control" name="login_id" type="text" placeholder="I  D" required>
