--- a/client/views/html/community/detailPost.ejs
+++ b/client/views/html/community/detailPost.ejs
@@ -27,7 +27,9 @@
       <div id="contentsContent" class="row border border-primary">
         <div id="content"></div>
       </div>
-      <div id="recommand">추천</div>
+      <form method="post">
+        <button id="recommand" class="btn btn-default">추천</button>
+      </form>
     </div>
 
   </body>
