--- a/client/views/html/community/main.ejs
+++ b/client/views/html/community/main.ejs
@@ -14,8 +14,6 @@
       <div id="topHeader">
         <div id="divLogoTitle">
           <img id="logoTitle" src="/client/views/img/SIGNATURE.png" alt="이미지가 없습니다.">
-          <div id="account">
-          </div>
         </div>
       </div>
       <nav class="navbar navbar-expand-lg navbar-light bg-dark">
@@ -34,11 +32,23 @@
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  기능예시
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li>
+                    <hr class="dropdown-divider">
+                  </li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   커뮤니티
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <li><a class="dropdown-item" href="/community/board">게시판</a></li>
-                  <li><a class="dropdown-item" href="/chat">기능구현</a></li>
                   <li>
                     <hr class="dropdown-divider">
                   </li>
