--- a/client/views/html/index/signin.ejs
+++ b/client/views/html/index/signin.ejs
@@ -58,8 +58,9 @@
                   커뮤니티
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="/community">게시판</a></li>
-                  <li><a class="dropdown-item" href="/chat">랜덤채팅</a></li>
+                  <li>
+                    <a class="dropdown-item" href="/community">게시판</a>
+                  </li>
                   <li>
                     <hr class="dropdown-divider">
                   </li>
