--- a/client/views/css/community/main.css
+++ b/client/views/css/community/main.css
@@ -1,21 +1,5 @@
-input#title{
-  width: 850px;
-  height: 24px;
-  margin-top: 15px;
-  margin-right: 15px;
-  margin-left: 15px;
-  margin-bottom: 10px;
-  background-color: transparent;
-}
-
 div#divLogoTitle{
   text-align: center;
-}
-
-textarea#content{
-  width: 850px;
-  height: 150px;
-  background-color: transparent;
 }
 
 button#post_btn{
@@ -38,38 +22,11 @@ body{
   background-color: gainsboro;
 }
 
-#logo{
-position: absolute;
-animation: rotate_logo 15s infinite;
-width: 85px;
-height: 85px;
-left: 15px;
-position: relative;
-}
-
-div#navigator{
-  display: contents;
-}
-
-button.menu{
-  background-color: transparent;
-  width: fit-content;
-  /* font-size: 24px; */
-  color: #c1c1c1;
-  border-style: none;
-  font-weight: 850;
-  font-size: xx-large;
-}
-
 button.menu:hover{
   background-color: #080808;
   cursor: pointer;
 }
 
-div#top_header{
-  border-top: 2px groove black;
-  background-color: #222222;
-  height: 85px;
-  display: flex;
-  justify-content: space-around;
+li.nav-item{
+  font-size: 15px;
 }
