--- a/client/views/html/index/signout.ejs
+++ b/client/views/html/index/signout.ejs
@@ -15,18 +15,9 @@
 
   <body style="background-color: #dcdcdc;">
     <header>
-      <div id="topHeader">
-        <div id="divLogoTitle">
-          <img id="logoTitle" src="/client/views/img/SIGNATURE.png" alt="이미지가 없습니다.">
-          <div id="account">
-            <button class="account"><a id="aSignIn" href="/auth/signin">로그인</a></button>
-            <button class="account"><a id="aSignUp" href="/auth/signup">회원가입</a></button>
-          </div>
-        </div>
-      </div>
       <nav class="navbar navbar-expand-lg navbar-light bg-dark">
         <div class="container-fluid">
-          <a id="connectionName" class="navbar-brand text-light" href="#">로그인이 필요합니다.</a>
+          <a id="connectionName" class="navbar-brand text-light btn btn-primary" href="/auth/signin">로그인하기</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
