--- a/client/views/html/index/signin.ejs
+++ b/client/views/html/index/signin.ejs
@@ -102,13 +102,15 @@
       </nav>
     </header>
     <main>
-      <div data-aos="fade-up-left">
+      <div style="height: 85vh; text-align: center;">아래로 스크롤 하시면 이력서가 공개됩니다.</div>
+      <div data-aos="fade-up-left" data-aos-id="first" data-aos-delay="150" data-aos-offset="750" style=" height: 22.4vh; background-color: aqua;">
         <hr>
-        <div id="first" class="border border-1 border-dark" data-aos-id="first" data-aos-anchor-placement="top-top">
+        <div id="first" class="border border-1 border-dark">
           <p style="font-size:24px; font-weight: bolder;">
             <a style="font-size: xx-large;">-선희수-</a>
             <br>웹 개발 포트폴리오
           </p>
+          <!-- 이 아래서부터 수정 필요 -->
           <hr style="margin-left: 85px; margin-right: 85px;">
           <p>
             웹 개발 공부를 하고있는 비전공 개발자 지망생입니다.<br>
@@ -117,49 +119,51 @@
           WEB DESIGN- sun hyisu
         </div>
       </div>
-      <div id="introduce" class="border border-1 border-info" style="width: 640px; margin: auto; margin-top: 15px; padding: 10px;" data-aos="flip-up" data-aos-offset="500" data-aos-anchor-placement="top-bottom">
-        <div style="font-weight: bolder; font-size: 50px;">About Me</div>
-        <hr>
-        <div>
-          <p>
-          <div class="border border-1 border-secondary" style="width: 620px; height: fit-content;">
-            <img src="/client/views/img/sunhyisu.jpg" alt="대체 이미지" style="width: 150px; height: 240px;">
-            <div style="display: inline-block; font-size: smaller;">
-              성명 : 선희수(宣熙秀)
-              <br>
-              나이 : 만 23세
-              <br>
-              주민등록번호 : 990524 - 1590812
-              <br>
-              생년월일 : 1999.05.24
-              <br>
-              연락처 : 010-3194-3474
-              <br>
-              주소 : 광주광역시 광산구 금봉로 18, 소촌라인2차 208동 508호
+      <div style="height: 100vh;">
+        <div id="introduce" class="border border-1 border-info" style="width: 640px; margin: auto; margin-top: 15px; padding: 10px;" data-aos="flip-up" data-aos-offset="1000">
+          <div style="font-weight: bolder; font-size: 50px;">About Me</div>
+          <hr>
+          <div>
+            <p>
+            <div class="border border-1 border-secondary" style="width: 620px; height: fit-content;">
+              <img src="/client/views/img/sunhyisu.jpg" alt="대체 이미지" style="width: 150px; height: 240px;">
+              <div style="display: inline-block; font-size: smaller;">
+                성명 : 선희수(宣熙秀)
+                <br>
+                나이 : 만 23세
+                <br>
+                주민등록번호 : 990524 - 1590812
+                <br>
+                생년월일 : 1999.05.24
+                <br>
+                연락처 : 010-3194-3474
+                <br>
+                주소 : 광주광역시 광산구 금봉로 18, 소촌라인2차 208동 508호
+              </div>
             </div>
+            </p>
+            <p>
+              학력사항
+              <br>
+              &nbsp;&nbsp;- 장성 삼계고등학교(부사관과) 졸업
+            </p>
+            <p>
+              경력사항
+              <br>
+              &nbsp;&nbsp;[직무 경력]
+              <br>
+              &nbsp;&nbsp;&nbsp;&nbsp;- 개발관련 직무 경험 없음
+              <br>
+              &nbsp;&nbsp;[사회 경력]
+              <br>
+              &nbsp;&nbsp;&nbsp;&nbsp;-19 ~ 24세 직업군인(부사관)
+            </p>
+            <p>
+              기타사항
+              <br>
+              &nbsp;&nbsp;<button class="btn btn-dark" type="button" onclick="openMotive()">지원 동기</button>
+            </p>
           </div>
-          </p>
-          <p>
-            학력사항
-            <br>
-            &nbsp;&nbsp;- 장성 삼계고등학교(부사관과) 졸업
-          </p>
-          <p>
-            경력사항
-            <br>
-            &nbsp;&nbsp;[직무 경력]
-            <br>
-            &nbsp;&nbsp;&nbsp;&nbsp;- 개발관련 직무 경험 없음
-            <br>
-            &nbsp;&nbsp;[사회 경력]
-            <br>
-            &nbsp;&nbsp;&nbsp;&nbsp;-19 ~ 24세 직업군인(부사관)
-          </p>
-          <p>
-            기타사항
-            <br>
-            &nbsp;&nbsp;<button class="btn btn-dark" type="button" onclick="openMotive()">지원 동기</button>
-          </p>
         </div>
       </div>
       <!-- <div class="border border-1 border-secondary" style="margin: 85px;" data-aos="fade-in" data-aos-offset="500" data-aos-anchor-placement="top-bottom">
