--- a/client/views/html/auth/signin.ejs
+++ b/client/views/html/auth/signin.ejs
@@ -39,7 +39,7 @@
         &nbsp;&nbsp;
         <a class="aFinds" href="/find/pw">비밀번호 찾기</a>
         &nbsp;&nbsp;
-        <a class="aFinds" href="/signup">회원가입</a>
+        <a class="aFinds" href="/auth/signup">회원가입</a>
       </div>
     </form>
 
