--- a/client/views/html/index/signin.ejs
+++ b/client/views/html/index/signin.ejs
@@ -102,30 +102,38 @@
       </nav>
     </header>
     <main>
-      <div style="height: 85vh; text-align: center;">아래로 스크롤 하시면 이력서가 공개됩니다.</div>
-      <div data-aos="fade-up-left" data-aos-id="first" data-aos-delay="150" data-aos-offset="750" style=" height: 22.4vh; background-color: aqua;">
-        <hr>
-        <div id="first" class="border border-1 border-dark">
-          <p style="font-size:24px; font-weight: bolder;">
-            <a style="font-size: xx-large;">-선희수-</a>
-            <br>웹 개발 포트폴리오
-          </p>
-          <!-- 이 아래서부터 수정 필요 -->
-          <hr style="margin-left: 85px; margin-right: 85px;">
-          <p>
-            웹 개발 공부를 하고있는 비전공 개발자 지망생입니다.<br>
+      <div style="height: 100vh;"></div>
+      <div style="text-align: center;">아래로 스크롤 하시면 이력서가 공개됩니다.</div>
+      <div style="height: 100vh;"></div>
+      <div id="first" class="border border-1 border-dark" data-aos="fade-up-left" data-aos-id="first" data-aos-offset="600">
+        <p style="font-size:24px; font-weight: bolder;">
+          <a style="font-size: xx-large; font-weight: bolder; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">"선희수"</a>
+          <br>웹 개발 포트폴리오
+        </p>
+        <!-- 이 아래서부터 수정 필요 -->
+        <hr style="height: 2px; margin-inline: 24px;">
+        <div>
+          <p style="display: inline-block; text-align: left; margin-left: 24px;">
+            웹 개발 공부를 하고있는 비전공 개발자 지망생입니다.
+            <br>
             항상 긍정적인 마인드와 넘치는 에너지가 저의 장점입니다.
           </p>
-          WEB DESIGN- sun hyisu
+          <hr style="display: table; width: 5px; height: 100px; margin: auto;">
+          asdasdads
+          <div><a style="color: blue;">WEB DESIGNED</a>
+            <br>
+            <a style="font-weight: 850;">By sun hyisu</a>
+          </div>
         </div>
       </div>
-      <div style="height: 100vh;">
-        <div id="introduce" class="border border-1 border-info" style="width: 640px; margin: auto; margin-top: 15px; padding: 10px;" data-aos="flip-up" data-aos-offset="1000">
+      <div style="height: 100vh;"></div>
+      <div>
+        <div id="introduce" class="border border-1 border-info" style="width: 640px; margin: auto; margin-top: 15px; padding: 10px;" data-aos="flip-up" data-aos-offset="700">
           <div style="font-weight: bolder; font-size: 50px;">About Me</div>
           <hr>
           <div>
             <p>
-            <div class="border border-1 border-secondary" style="width: 620px; height: fit-content;">
+            <div class="border border-1 border-secondary" style="width: 618px; height: fit-content;">
               <img src="/client/views/img/sunhyisu.jpg" alt="대체 이미지" style="width: 150px; height: 240px;">
               <div style="display: inline-block; font-size: smaller;">
                 성명 : 선희수(宣熙秀)
@@ -166,6 +174,7 @@
           </div>
         </div>
       </div>
+      <div style="height: 100vh;"></div>
       <!-- <div class="border border-1 border-secondary" style="margin: 85px;" data-aos="fade-in" data-aos-offset="500" data-aos-anchor-placement="top-bottom">
         <div id="bestContentsTitle">공지사항</div>
         <table id="bestContents" class="table table-hover">
