--- a/client/views/html/resume/introduce.ejs
+++ b/client/views/html/resume/introduce.ejs
@@ -17,19 +17,15 @@
       </div>
       <hr>
       <div style="font-size: 15px;">
-        이미 성장한 대기업이나, 스타트업이나 시작점은 동일하다고 생각합니다.
+        항상 긍정적인 생각과 정체 되어있지 않고 항상 발전하려고 노력하는 "선희수"입니다.
         <br>
-        기업은 혼자 성장할 수 없듯이 사람도 혼자서 성장하기에는 많이 더디다고 생각합니다.
         <br>
-
+        저는 17년도에 고등학교 졸업과 동시에 22년도까지 약 5년 간 육군 부사관으로 복무를 하였습니다.
+        20세가 되기 전 군 생활을 통해 많고 다양한 사람들을 많이 만남으로써 사람을 대하는 방법을 배웠습니다.
         <br>
-        또한, 기업에서 요구하는 기술과 인재상을 충족해야 합니다.
         <br>
-        직무를 선택함에 있어, 중요하게 바라보아야 하는 점은 본인 스스로가 충분한 역량을 가지고 있는지 알아야 합니다.
-        <br>
-        OOOO 기업은 OO년도 부터 현재까지 지속적인 성장을 이어나가고 있습니다.
-        <br>
-
+        또한, 항상 꼼꼼하고 긍정적인 성격 덕분에 어떤 업무가 주어짐에 있어서 끝까지 마무리하려는 성격을 가지고 있습니다.
+        쉬운 업무라도 완벽하게 처리하려는 생각 때문에 처리 속도가 느리다는 단점이 있습니다.
       </div>
     </div>
   </body>
